[gd_scene load_steps=5 format=3 uid="uid://bi5g78vqtaklg"]

[ext_resource type="Script" uid="uid://de8lvgc1cq1yr" path="res://interface/beat_visualiser/beat_visualiser.gd" id="1_gy0et"]
[ext_resource type="PackedScene" uid="uid://bfpcf1uduh2rv" path="res://interface/beat_visualiser/diamond_visual.tscn" id="2_cmeed"]
[ext_resource type="FontFile" uid="uid://dag7s301mbfag" path="res://assets/fonts/ChiqPro.ttf" id="4_kdp3e"]

[sub_resource type="LabelSettings" id="LabelSettings_ud2ia"]
font = ExtResource("4_kdp3e")
font_size = 30

[node name="BeatVisualiser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gy0et")

[node name="DiamondVisual" parent="." instance=ExtResource("2_cmeed")]
layout_mode = 1
offset_left = 497.0
offset_top = 511.0
offset_right = -566.0
offset_bottom = -53.0

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 0

[node name="LabelQuality" type="Label" parent="CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "PERFECT"
label_settings = SubResource("LabelSettings_ud2ia")
horizontal_alignment = 1

[node name="TimerHideQuality" type="Timer" parent="CenterContainer"]
unique_name_in_owner = true
one_shot = true
